Split generics into a class for difinition and a class for parsing. Also exposed the implemented interfaces.

--- a/CsLuaCompiler/CsLuaCompiler.csproj
+++ b/CsLuaCompiler/CsLuaCompiler.csproj
@@ -99,7 +99,8 @@
     <Compile Include="SyntaxAnalysis\EnumElement.cs" />
     <Compile Include="SyntaxAnalysis\ForeachLoop.cs" />
     <Compile Include="SyntaxAnalysis\ForLoop.cs" />
-    <Compile Include="SyntaxAnalysis\Generics.cs" />
+    <Compile Include="SyntaxAnalysis\GenericsDefinition.cs" />
+    <Compile Include="SyntaxAnalysis\GenericsParsing.cs" />
     <Compile Include="SyntaxAnalysis\IfStatement.cs" />
     <Compile Include="SyntaxAnalysis\IFunction.cs" />
     <Compile Include="SyntaxAnalysis\ILuaElement.cs" />
