Compiler able to understand references to IList, IDictionary and System.Exception.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@
 
 /CsLuaCompiler/obj/Debug
 /CsLuaCompiler/CsLuaCompiler.csproj.user
+/CsLuaAttributes/bin/Debug
+/CsLuaAttributes/obj/Debug
+/.vs/CsLuaCompiler/v14
+/CsLuaCompiler/bin/Debug
+/CsLuaCompiler.suo
+/CsLuaCompiler.v11.suo
