--- a/CsLuaCompiler/CsLuaCompiler.csproj
+++ b/CsLuaCompiler/CsLuaCompiler.csproj
@@ -51,12 +51,13 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddOn.cs" />
-    <Compile Include="CodeFile.cs" />
+    <Compile Include="Deployment\AddOn.cs" />
+    <Compile Include="Deployment\CodeFile.cs" />
     <Compile Include="CompilerException.cs" />
     <Compile Include="CsProject.cs" />
-    <Compile Include="IDeployableAddOn.cs" />
-    <Compile Include="LuaAddOn.cs" />
+    <Compile Include="Deployment\IDeployableAddOn.cs" />
+    <Compile Include="Deployment\LuaAddOn.cs" />
+    <Compile Include="LuaFileWriter.cs" />
     <Compile Include="ProjectType.cs" />
     <Compile Include="Providers\GenericsRegistry\GenericsRegistry.cs" />
     <Compile Include="Providers\GenericsRegistry\IGenericsRegistry.cs" />
@@ -75,7 +76,9 @@
     <Compile Include="Providers\TypeProvider\ScopeElement.cs" />
     <Compile Include="Providers\TypeProvider\TypeNameProvider.cs" />
     <Compile Include="Providers\TypeProvider\TypeResult.cs" />
-    <Compile Include="ResourceFile.cs" />
+    <Compile Include="Deployment\ResourceFile.cs" />
+    <Compile Include="SolutionAnalysis\ProjectAnalyser.cs" />
+    <Compile Include="SolutionAnalysis\ProjectInfo.cs" />
     <Compile Include="SolutionHandler.cs" />
     <Compile Include="SyntaxAnalysis\BaseList.cs" />
     <Compile Include="SyntaxAnalysis\BracketedArgumentList.cs" />
@@ -128,7 +131,6 @@
     <Compile Include="SyntaxAnalysis\Property.cs" />
     <Compile Include="SyntaxAnalysis\ReferencedVariableName.cs" />
     <Compile Include="SyntaxAnalysis\Scope.cs" />
-    <Compile Include="SettingsReader.cs" />
     <Compile Include="SyntaxAnalysis\Struct.cs" />
     <Compile Include="SyntaxAnalysis\Switch.cs" />
     <Compile Include="SyntaxAnalysis\SyntaxAnalyser.cs" />
@@ -140,6 +142,7 @@
     <Compile Include="SyntaxAnalysis\VariableName.cs" />
     <Compile Include="SyntaxAnalysis\VariableType.cs" />
     <Compile Include="SyntaxAnalysis\WhileLoop.cs" />
+    <Compile Include="Deployment\TocBuilder.cs" />
     <Compile Include="WrappingException.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -153,6 +156,7 @@
       <Name>CsLuaAttributes</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <ImportGroup Label="Targets">
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
