--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -6,6 +6,7 @@
   <repository path="..\CSharp\FormatSolution\packages.config" />
   <repository path="..\CSharp\ImplementNotifyPropertyChanged\packages.config" />
   <repository path="..\CSharp\MakeConst\packages.config" />
+  <repository path="..\CsLuaCompiler\packages.config" />
   <repository path="..\CsToLua\packages.config" />
   <repository path="..\VisualBasic\APISampleUnitTestsVB\packages.config" />
   <repository path="..\VisualBasic\ConsoleClassifier\packages.config" />
