Added a powershell build action to append all lua files into one file.

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@
 /CsLuaConverter/CsLuaConverter/obj/Debug
 /CsLuaConverter/.vs/CsLuaConverter/v14/.suo
 /CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj.user
+/CsLuaConverter
+/CsLuaCompiler.v12.suo
+/CsLuaCompiler.sln.DotSettings.user
+/CsLua.v12.suo
