--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -66,7 +66,7 @@
     </PreBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <PostBuildEvent>powershell -file "$(SolutionDir)CsLuaConverter\CopyLuaToOutput.ps1" "$(SolutionDir)CsLuaConverter"</PostBuildEvent>
+    <PostBuildEvent>powershell -ExecutionPolicy ByPass -file "$(SolutionDir)CsLuaConverter\CopyLuaToOutput.ps1" "$(SolutionDir)CsLuaConverter"</PostBuildEvent>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
