Handling of extensions for all object types.

--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -176,6 +176,7 @@
   <ItemGroup>
     <None Include="CopyLuaToOutput.ps1" />
     <None Include="Lua\CsLuaMeta.lua" />
+    <None Include="Lua\System.Type.lua" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CsLuaAttributes\CsLuaAttributes.csproj">
