--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,8 @@
 /CsLuaConverter/CsLuaConverter/obj/Debug
 /CsLuaConverter/.vs/CsLuaConverter/v14/.suo
 /CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj.user
-/CsLuaConverter
 /CsLuaCompiler.v12.suo
 /CsLuaCompiler.sln.DotSettings.user
 /CsLua.v12.suo
+/CsLuaConverter/CsLuaConverter.sln.DotSettings.user
+/CsLuaConverter/CsLuaConverter.v12.suo
