Finished System.Type, including GetHashCode() and a cache for creating them. Progress on refactoring.

--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -168,7 +168,7 @@
     <Compile Include="SyntaxAnalysis\TypeLookupException.cs" />
     <Compile Include="SyntaxAnalysis\Var.cs" />
     <Compile Include="SyntaxAnalysis\VariableName.cs" />
-    <Compile Include="SyntaxAnalysis\VariableType.cs" />
+    <Compile Include="SyntaxAnalysis\VariableDefinition.cs" />
     <Compile Include="SyntaxAnalysis\WhileLoop.cs" />
     <Compile Include="AddOnConstruction\TocBuilder.cs" />
     <Compile Include="WrappingException.cs" />
