--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -176,6 +176,8 @@
   <ItemGroup>
     <None Include="CopyLuaToOutput.ps1" />
     <None Include="Lua\CsLuaMeta.lua" />
+    <None Include="Lua\Class.lua" />
+    <None Include="Lua\System.Object.lua" />
     <None Include="Lua\System.Type.lua" />
   </ItemGroup>
   <ItemGroup>
