--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -177,6 +177,8 @@
     <None Include="CopyLuaToOutput.ps1" />
     <None Include="Lua\CsLuaMeta.lua" />
     <None Include="Lua\Class.lua" />
+    <None Include="Lua\Meta\InteractionElement.lua" />
+    <None Include="Lua\Meta\NamespaceElement.lua" />
     <None Include="Lua\System.Object.lua" />
     <None Include="Lua\System.Type.lua" />
   </ItemGroup>
@@ -198,6 +200,7 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <ImportGroup Label="Targets">
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
