--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -176,11 +176,11 @@
   <ItemGroup>
     <None Include="CopyLuaToOutput.ps1" />
     <None Include="Lua\CsLuaMeta.lua" />
-    <None Include="Lua\Class.lua" />
+    <None Include="Lua\Meta\ArgumentMatching.lua" />
     <None Include="Lua\Meta\InteractionElement.lua" />
     <None Include="Lua\Meta\NamespaceElement.lua" />
-    <None Include="Lua\System.Object.lua" />
-    <None Include="Lua\System.Type.lua" />
+    <None Include="Lua\System\System.Object.lua" />
+    <None Include="Lua\System\System.Type.lua" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CsLuaAttributes\CsLuaAttributes.csproj">
