--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -181,6 +181,7 @@
     <None Include="Lua\Meta\Dot.lua" />
     <None Include="Lua\Meta\InteractionElement.lua" />
     <None Include="Lua\Meta\NamespaceElement.lua" />
+    <None Include="Lua\System\System.Array.lua" />
     <None Include="Lua\System\System.Action.lua" />
     <None Include="Lua\System\System.Collections.Generic.Dictionary.lua" />
     <None Include="Lua\System\System.Collections.Generic.List.lua" />
