--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -182,6 +182,9 @@
     <None Include="Lua\Meta\Dot.lua" />
     <None Include="Lua\Meta\InteractionElement.lua" />
     <None Include="Lua\Meta\NamespaceElement.lua" />
+    <None Include="Lua\Meta\Try.lua" />
+    <None Include="Lua\Meta\aa._M.lua" />
+    <None Include="Lua\System\System.Exception.lua" />
     <None Include="Lua\System\System.Int32.lua" />
     <None Include="Lua\System\System.Array.lua" />
     <None Include="Lua\System\System.Action.lua" />
@@ -190,6 +193,7 @@
     <None Include="Lua\System\System.String.lua" />
     <None Include="Lua\System\System.Object.lua" />
     <None Include="Lua\System\System.Type.lua" />
+    <None Include="Lua\System\aa.System.lua" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CsLuaAttributes\CsLuaAttributes.csproj">
