--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -101,7 +101,7 @@
     <Compile Include="Providers\TypeProvider\TypeResult.cs" />
     <Compile Include="AddOnConstruction\ResourceFile.cs" />
     <Compile Include="ProjectAnalysis\ProjectAnalyser.cs" />
-    <Compile Include="ProjectAnalysis\ProjectInfo.cs" />
+    <Compile Include="AddOnConstruction\ProjectInfo.cs" />
     <Compile Include="ReferenceAnalysis\HostGraphNodeType.cs" />
     <Compile Include="ReferenceAnalysis\HostGraphNode.cs" />
     <Compile Include="ReferenceAnalysis\ReferenceAnalyzer.cs" />
