Progress on refactoring.

--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -76,6 +76,21 @@
     <Compile Include="AddOnConstruction\AddOn.cs" />
     <Compile Include="AddOnConstruction\AddOnConstructor.cs" />
     <Compile Include="AddOnConstruction\CodeFile.cs" />
+    <Compile Include="CodeElementAnalysis\ArgumentList.cs" />
+    <Compile Include="CodeElementAnalysis\Block.cs" />
+    <Compile Include="CodeElementAnalysis\BracketedArgumentList.cs" />
+    <Compile Include="CodeElementAnalysis\EqualsValueClause.cs" />
+    <Compile Include="CodeElementAnalysis\Line.cs" />
+    <Compile Include="CodeElementAnalysis\MethodDeclaration.cs" />
+    <Compile Include="CodeElementAnalysis\NumericLiteralExpression.cs" />
+    <Compile Include="CodeElementAnalysis\ObjectCreationExpression.cs" />
+    <Compile Include="CodeElementAnalysis\PredefinedType.cs" />
+    <Compile Include="CodeElementAnalysis\Scope.cs" />
+    <Compile Include="CodeElementAnalysis\SimpleAssignmentExpression.cs" />
+    <Compile Include="CodeElementAnalysis\SimpleMemberAccessExpression.cs" />
+    <Compile Include="CodeElementAnalysis\StringLiteralExpression.cs" />
+    <Compile Include="CodeElementAnalysis\ThisExpression.cs" />
+    <Compile Include="CodeElementAnalysis\VariableDeclarator.cs" />
     <Compile Include="ConverterException.cs" />
     <Compile Include="AddOnConstruction\IDeployableAddOn.cs" />
     <Compile Include="AddOnConstruction\LuaAddOn.cs" />
@@ -129,7 +144,7 @@
     <Compile Include="SyntaxAnalysis\Constructor.cs" />
     <Compile Include="SyntaxAnalysis\Creator.cs" />
     <Compile Include="SyntaxAnalysis\Delegate.cs" />
-    <Compile Include="SyntaxAnalysis\V2\BaseElement.cs" />
+    <Compile Include="CodeElementAnalysis\BaseElement.cs" />
     <Compile Include="SyntaxAnalysis\Else.cs" />
     <Compile Include="SyntaxAnalysis\EnumElement.cs" />
     <Compile Include="SyntaxAnalysis\ForeachLoop.cs" />
@@ -168,12 +183,15 @@
     <Compile Include="SyntaxAnalysis\Throw.cs" />
     <Compile Include="SyntaxAnalysis\Try.cs" />
     <Compile Include="SyntaxAnalysis\TypeLookupException.cs" />
-    <Compile Include="SyntaxAnalysis\V2\BaseListElement.cs" />
-    <Compile Include="SyntaxAnalysis\V2\ClassDeclaration.cs" />
-    <Compile Include="SyntaxAnalysis\V2\ContainerElement.cs" />
-    <Compile Include="SyntaxAnalysis\V2\DocumentElement.cs" />
-    <Compile Include="SyntaxAnalysis\V2\IdentifierNameElement.cs" />
-    <Compile Include="SyntaxAnalysis\V2\NamespaceDeclaration.cs" />
+    <Compile Include="CodeElementAnalysis\BaseListElement.cs" />
+    <Compile Include="CodeElementAnalysis\ClassDeclaration.cs" />
+    <Compile Include="CodeElementAnalysis\ConstructorDeclaration.cs" />
+    <Compile Include="CodeElementAnalysis\ContainerElement.cs" />
+    <Compile Include="CodeElementAnalysis\DocumentElement.cs" />
+    <Compile Include="CodeElementAnalysis\IdentifierName.cs" />
+    <Compile Include="CodeElementAnalysis\NamespaceDeclaration.cs" />
+    <Compile Include="CodeElementAnalysis\ParameterList.cs" />
+    <Compile Include="CodeElementAnalysis\SyntaxTokenExtension.cs" />
     <Compile Include="SyntaxAnalysis\Var.cs" />
     <Compile Include="SyntaxAnalysis\VariableName.cs" />
     <Compile Include="SyntaxAnalysis\VariableDefinition.cs" />
