Structure refactoring, allowing for easily plugging between the old and the new analyzer.

--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -76,25 +76,39 @@
     <Compile Include="AddOnConstruction\AddOn.cs" />
     <Compile Include="AddOnConstruction\AddOnConstructor.cs" />
     <Compile Include="AddOnConstruction\CodeFile.cs" />
+    <Compile Include="AnalyzedProjectInfo.cs" />
+    <Compile Include="CodeElementAnalysis\Analyzer.cs" />
     <Compile Include="CodeElementAnalysis\ArgumentList.cs" />
     <Compile Include="CodeElementAnalysis\Block.cs" />
     <Compile Include="CodeElementAnalysis\BracketedArgumentList.cs" />
     <Compile Include="CodeElementAnalysis\EqualsValueClause.cs" />
+    <Compile Include="CodeElementAnalysis\FieldDeclaration.cs" />
+    <Compile Include="CodeElementAnalysis\GenericName.cs" />
+    <Compile Include="CodeElementAnalysis\IDocumentVisitor.cs" />
     <Compile Include="CodeElementAnalysis\Line.cs" />
     <Compile Include="CodeElementAnalysis\MethodDeclaration.cs" />
+    <Compile Include="CodeElementAnalysis\NullLiteralExpression.cs" />
     <Compile Include="CodeElementAnalysis\NumericLiteralExpression.cs" />
     <Compile Include="CodeElementAnalysis\ObjectCreationExpression.cs" />
+    <Compile Include="CodeElementAnalysis\Parameter.cs" />
     <Compile Include="CodeElementAnalysis\PredefinedType.cs" />
     <Compile Include="CodeElementAnalysis\Scope.cs" />
     <Compile Include="CodeElementAnalysis\SimpleAssignmentExpression.cs" />
     <Compile Include="CodeElementAnalysis\SimpleMemberAccessExpression.cs" />
     <Compile Include="CodeElementAnalysis\StringLiteralExpression.cs" />
     <Compile Include="CodeElementAnalysis\ThisExpression.cs" />
+    <Compile Include="CodeElementAnalysis\TrueLiteralExpression.cs" />
+    <Compile Include="CodeElementAnalysis\TypeArgumentList.cs" />
+    <Compile Include="CodeElementAnalysis\TypeParameter.cs" />
+    <Compile Include="CodeElementAnalysis\TypeParameterList.cs" />
+    <Compile Include="CodeElementAnalysis\UsingDirective.cs" />
     <Compile Include="CodeElementAnalysis\VariableDeclarator.cs" />
     <Compile Include="ConverterException.cs" />
     <Compile Include="AddOnConstruction\IDeployableAddOn.cs" />
     <Compile Include="AddOnConstruction\LuaAddOn.cs" />
+    <Compile Include="ISyntaxAnalyser.cs" />
     <Compile Include="LuaFileWriter.cs" />
+    <Compile Include="LuaVisitor\LuaDocumentVisitor.cs" />
     <Compile Include="ProjectType.cs" />
     <Compile Include="Providers\GenericsRegistry\GenericScope.cs" />
     <Compile Include="Providers\GenericsRegistry\GenericsRegistry.cs" />
@@ -121,7 +135,6 @@
     <Compile Include="ReferenceAnalysis\HostGraphNode.cs" />
     <Compile Include="ReferenceAnalysis\ReferenceAnalyzer.cs" />
     <Compile Include="SolutionHandler.cs" />
-    <Compile Include="SyntaxAnalysis\AnalyzedProjectInfo.cs" />
     <Compile Include="SyntaxAnalysis\BaseList.cs" />
     <Compile Include="SyntaxAnalysis\BracketedArgumentList.cs" />
     <Compile Include="SyntaxAnalysis\ArgumentList.cs" />
