--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -109,6 +109,9 @@
     <Compile Include="ISyntaxAnalyser.cs" />
     <Compile Include="LuaFileWriter.cs" />
     <Compile Include="LuaVisitor\LuaDocumentVisitor.cs" />
+    <Compile Include="LuaVisitor\Namespace.cs" />
+    <Compile Include="LuaVisitor\NamespaceElement.cs" />
+    <Compile Include="LuaVisitor\NamespaceExtractor.cs" />
     <Compile Include="ProjectType.cs" />
     <Compile Include="Providers\GenericsRegistry\GenericScope.cs" />
     <Compile Include="Providers\GenericsRegistry\GenericsRegistry.cs" />
