Dynamic selection of visitor method in visitor list.

--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -108,6 +108,7 @@
     <Compile Include="AddOnConstruction\LuaAddOn.cs" />
     <Compile Include="ISyntaxAnalyser.cs" />
     <Compile Include="LuaFileWriter.cs" />
+    <Compile Include="LuaVisitor\ClassVisitor.cs" />
     <Compile Include="LuaVisitor\VisitorList.cs" />
     <Compile Include="LuaVisitor\IVisitor.cs" />
     <Compile Include="LuaVisitor\LuaDocumentVisitor.cs" />
