--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -109,6 +109,8 @@
     <Compile Include="ISyntaxAnalyser.cs" />
     <Compile Include="LuaFileWriter.cs" />
     <Compile Include="LuaVisitor\ClassVisitor.cs" />
+    <Compile Include="LuaVisitor\Extensions.cs" />
+    <Compile Include="LuaVisitor\TypeVisitor.cs" />
     <Compile Include="LuaVisitor\VisitorList.cs" />
     <Compile Include="LuaVisitor\IVisitor.cs" />
     <Compile Include="LuaVisitor\LuaDocumentVisitor.cs" />
